--- a/parkingapp/templates/panel.html
+++ b/parkingapp/templates/panel.html
@@ -93,7 +93,7 @@
       {% csrf_token %}
       <div class="input-group mb-3">
         <input type="date" class="form-control" value="{{ start }}" name="period_start">
-      <input type="date" class="form-control" name="period_end">
+      <input type="date" class="form-control" value="{{ end }}" name="period_end">
       <button type="submit" class="btn btn-primary">Получить данные</button>
       </div>
       
@@ -165,18 +165,6 @@
   <div id="map" style="width:500px; height:400px"></div>
 
 </div>
-<script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
-<script type="text/javascript">
-    var map;
-    DG.then(function () {
-        map = DG.map('map', {
-            center: [54.72, 20.4],
-            zoom: 13
-        });
-        DG.marker([54.98, 82.89]).addTo(map).bindPopup('Вы кликнули по мне!');
-    });
-</script>
-
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js" integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp" crossorigin="anonymous"></script>
 {% endblock %}
