--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -16,8 +16,12 @@
     
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="index" class="nav-link {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
+            {% if not logged %}
             <li class="nav-item"><a href="sign" class="nav-link {% block active_sign %}{% endblock %}">Регистрация</a></li>
             <li class="nav-item"><a href="enter" class="nav-link {% block active_enter %}{% endblock %}">Вход</a></li>
+            {% else %}
+            <li class="nav-item"><a href="enter" class="nav-link">Выход</a></li>
+            {% endif %}
           </ul>
         </header>
     </div>
