В ПОСЛЕДНИЕ ПОЛТОРА ЧАСА НИЧЕГО НЕ ПРОИЗОШЛО

--- a/parkingapp/templates/endparking.html
+++ b/parkingapp/templates/endparking.html
@@ -13,6 +13,7 @@
                     <p class="lead my-0">id парковки: {{ reciept.parking_id.pk }}</p>
                     <p class="lead">id чека: {{ reciept.pk }}</p>
                 </div>
+                <a class="btn btn-primary" href="index">Вернуться назад</a>
             </div>
         </div>
       </div>
