--- a/parkingapp/templates/error.html
+++ b/parkingapp/templates/error.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="display-4 text-center fw-bold text-body-emphasis" style="height: 100vh;">ДУРА!!! НЕТУ ТАКОГО!!!</h1>
+<h1 class="display-4 text-center fw-bold text-body-emphasis">Неизвестная ошибка</h1>
 {% endblock %}
