--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -5,7 +5,7 @@
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-lg-6 col-12">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Паркуйтесь быстро и просто</h1>
-        <p class="lead">Введите 4 цифры с шлагбаума в поле "ID парковки", перед этим войдите в аккаунт или зарегестрируйтесь, привязав карту</p>
+        <p class="lead">Введите цифры с шлагбаума в поле "ID парковки", перед этим войдите в аккаунт или зарегестрируйтесь, привязав карту</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <a href="enter" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Войти</a>
           <a href="sign" type="button" class="btn btn-outline-secondary btn-lg px-4">Зарегестрироваться</a>
@@ -50,7 +50,7 @@
 {% endfor %}
 {% endif %}
 
-<div id="map" style="width:500px; height:400px"></div>
+<div id="map" style="width:500px; height:400px; border-radius: 2rem;" class="shadow mx-auto"></div>
 <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
 <script type="text/javascript">
     var map;
@@ -59,7 +59,7 @@
           center: [54.7065, 20.511],
           zoom: 9
       });
-      let parking = "{{parkings}}".replace("[", "").replace("]", "").replace(",", "").split(" ");
+      let parking = "{{ parkings }}".replace("[", "").replace("]", "").replace(",", "").split(" ");
       for(let i=0; i<parking.length; i++){
         parking[i] = parking[i].replace(",", "")
       }
@@ -88,8 +88,9 @@
         else if(i%6==3) places=Number(parking[i]);
         else if(i%6==4) price=Number(parking[i]);
         else if(i%6==5){
+          console.log(x, y, id, places, price)
           //console.log(x, y, id);
-          DG.marker([x, y]).addTo(map).bindPopup("Айди парковки: "+id+", Свободные места:"+places+", Цена:"+price);
+          DG.marker([x, y]).addTo(map).bindPopup("ID парковки: "+id+" | Свободные места: "+places+" | Цена: "+price);
         }
       }
       console.log(parking)
