--- a/parkingapp/templates/panel.html
+++ b/parkingapp/templates/panel.html
@@ -81,8 +81,8 @@
             <th scope="row">{{ el.address }}</th>
             <td>{{ el.total_price }}</td>
             <td>{{ el.how_much_people_used }}</td>
-            <td>@{{ el.with_benefits }}</td>
-            <td>@{{ el.benefits_price }}</td>
+            <td>{{ el.with_benefits }}</td>
+            <td>{{ el.benefits_price }}</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -90,80 +90,6 @@
   </div>
   <div id="map" style="width:500px; height:400px"></div>
 
-</div>
-
-<div class="col-md-6 col-sm-12">
-  <div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalSheet">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content rounded-4 shadow">
-        <div class="modal-header border-bottom-0">
-          <h1 class="modal-title fs-5">Добавить пользователя</h1>
-        </div>
-        <div class="modal-body py-0">
-          <p>Добавляйте пользователей в ЛГБТ сообщество</p>
-        </div>
-        <div class="modal-footer flex-column align-items-stretch w-100 gap-2 pb-3 border-top-0">
-          <button type="button" class="btn btn-lg btn-primary">Админимстратор</button>
-          <button type="button" class="btn btn-lg btn-secondary" data-bs-dismiss="modal">Купонщик</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="col-lg-6 grid-margin stretch-card">
-  <div class="card">
-    <div class="card-body">
-      <h4 class="card-title">Basic Table</h4>
-      <p class="card-description">
-        Add class <code>.table</code>
-      </p>
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Profile</th>
-              <th>VatNo.</th>
-              <th>Created</th>
-              <th>Status</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Jacob</td>
-              <td>53275531</td>
-              <td>12 May 2017</td>
-              <td><label class="badge badge-danger">Pending</label></td>
-            </tr>
-            <tr>
-              <td>Messsy</td>
-              <td>53275532</td>
-              <td>15 May 2017</td>
-              <td><label class="badge badge-warning">In progress</label></td>
-            </tr>
-            <tr>
-              <td>John</td>
-              <td>53275533</td>
-              <td>14 May 2017</td>
-              <td><label class="badge badge-info">Fixed</label></td>
-            </tr>
-            <tr>
-              <td>Peter</td>
-              <td>53275534</td>
-              <td>16 May 2017</td>
-              <td><label class="badge badge-success">Completed</label></td>
-            </tr>
-            <tr>
-              <td>Dave</td>
-              <td>53275535</td>
-              <td>20 May 2017</td>
-              <td><label class="badge badge-warning">In progress</label></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js" integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp" crossorigin="anonymous"></script>
