вся техника работает

--- a/parkingapp/templates/coupon.html
+++ b/parkingapp/templates/coupon.html
@@ -4,7 +4,7 @@
         <div class="row align-items-center g-lg-5 py-5">
           <div class="col-lg-7 text-center text-lg-start">
             <h1 class="display-5 fw-bold lh-1 text-body-emphasis mb-3">Предоставить льготу</h1>
-            <p class="col-lg-10 fs-4">Введите идентификационный номер чека, который вам предоставит пользователь.<small class="text-secondary"><br>ID парковки: <span>14881983</span></small></p>
+            <p class="col-lg-10 fs-4">Введите идентификационный номер чека, который вам предоставит пользователь.</p>
           </div>
           <div class="col-md-10 mx-auto col-lg-5">
             <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" method="post">
