--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+  <form method="post" action="enter">
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="esp" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -20,11 +21,13 @@
             <li class="nav-item"><a href="sign" class="nav-link {% block active_sign %}{% endblock %}">Регистрация</a></li>
             <li class="nav-item"><a href="enter" class="nav-link {% block active_enter %}{% endblock %}">Вход</a></li>
             {% else %}
-            <li class="nav-item"><a href="enter" class="nav-link">Выход</a></li>
+            {% csrf_token %}
+            <button class="nav-item" name="logout" type="submit">Выход</button>
             {% endif %}
           </ul>
         </header>
     </div>
+  </form>
     {% block content %}{% endblock %}
     <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
