--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -70,7 +70,7 @@
       // lng lat pk lots price
       var myPlacemark = new ymaps.Placemark([parkings[i][0], parkings[i][1]], { 
           iconContent: 'Стоянка номер '+parkings[i][2], 
-          balloonContent: 'Стоянка номер '+parkings[i][2]+' | Свободных мест: '+parkings[i][3]+'Цена: '+parkings[i][4]
+          balloonContent: 'Стоянка номер '+parkings[i][2]+' | Свободных мест: '+parkings[i][3]+' | Цена: '+parkings[i][4]
       }, {
           preset: 'twirl#blueStretchyIcon'
       });
