--- a/parkingapp/templates/sign.html
+++ b/parkingapp/templates/sign.html
@@ -12,24 +12,28 @@
           <form method="post">
             {% csrf_token %}
             <div class="form-floating mb-3">
-              <input type="text" class="form-control rounded-3" id="a" placeholder="" name="username">
-              <label for="a">Имя владельца</label>
+              {{ form.username }}
+              <label for="{{ form.username.id_for_label }}">Имя пользователя</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="text" class="form-control rounded-3" id="a" placeholder="" name="card_num">
-              <label for="a">Номер карты</label>
+              {{ form.card_num }}
+              <label for="{{ form.card_num_id_for_label }}">Номер карты</label>         
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control rounded-3" id="a" placeholder="" name="card_period">
-                <label for="a">Срок действия</label>
+              {{ form.card_period }}  
+              <label for="{{ form.card_period.id_for_label }}">Срок действия</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control rounded-3" id="a" placeholder="" name="card_cvv">
-                <label for="a">CVV/CVC</label>
+              {{ form.card_cvv }}
+              <label for="{{ form.card_cvv.id_for_label }}">CVV/CVC</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control rounded-3" id="a" placeholder="" name="user_password">
-                <label for="a">Пароль</label>
+              {{ form.password1 }}
+              <label for="{{ form.password1.id_for_label }}">Пароль</label>
+            </div>
+            <div class="form-floating mb-3">
+              {{ form.password2 }}
+              <label for="{{ form.password2.id_for_label }}">Подтвердите пароль</label>
             </div>
             <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Зарегистрироваться</button>
             <small class="text-danger">{{ error }}</small>
