--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -17,12 +17,11 @@
           </a>
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="index" class="nav-link {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
-            {% if not logged %}
+            {% if not user.is_authenticated %}
             <li class="nav-item"><a href="sign" class="nav-link {% block active_sign %}{% endblock %}">Регистрация</a></li>
             <li class="nav-item"><a href="enter" class="nav-link {% block active_enter %}{% endblock %}">Вход</a></li>
             {% else %}
-            {% csrf_token %}
-            <button class="nav-item" name="logout" type="submit">Выход</button>
+            <li class="nav-item"><a href="logout" class="nav-link">Выход</a></li>
             {% endif %}
           </ul>
         </header>
