--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -40,7 +40,7 @@
           <li class="nav-item"><a href="panel" class="nav-link px-2 text-body-secondary">Панель администратора</a></li>
           <li class="nav-item"><a href="coupon" class="nav-link px-2 text-body-secondary">Выдача купонов</a></li>
           <li class="nav-item"><a href="signadmin" class="nav-link px-2 text-body-secondary">Добавить администратора</a></li>
-          <li class="nav-item"><a href="signcoupon" class="nav-link px-2 text-body-secondary">Добавить выдачу купонов</a></li>
+          <li class="nav-item"><a href="signcoupon" class="nav-link px-2 text-body-secondary">Добавить партнера</a></li>
           <li class="nav-item"><a href="addparking" class="nav-link px-2 text-body-secondary">Добавить парковку</a></li>
         </ul>
       </footer>
