--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -6,12 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
+<body style="overflow-x: hidden; width: 100vw;" {% block theme %}{% endblock %}>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-          <a href="esp" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="fs-4">ЕСП</span>
+          <a href="esp" class="d-flex ms-2 ms-md-0 align-items-center mb-md-0 me-auto link-body-emphasis text-decoration-none nor">
+            <span class="fs-2">ЕСП</span>
           </a>
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="index" class="nav-link {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
@@ -27,19 +26,11 @@
     {% block content %}{% endblock %}
     <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">© 2023 Company, Inc</p>
+        <p class="col-md-4 mb-0 text-body-secondary">© 2023 бронепоезд</p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
         </a>
-    
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="panel" class="nav-link px-2 text-body-secondary">Панель администратора</a></li>
-          <li class="nav-item"><a href="coupon" class="nav-link px-2 text-body-secondary">Выдача купонов</a></li>
-          <li class="nav-item"><a href="signadmin" class="nav-link px-2 text-body-secondary">Добавить администратора</a></li>
-          <li class="nav-item"><a href="signcoupon" class="nav-link px-2 text-body-secondary">Добавить выдачу купонов</a></li>
-          <li class="nav-item"><a href="addparking" class="nav-link px-2 text-body-secondary">Добавить парковку</a></li>
-        </ul>
       </footer>
     </div>
 </body>
