--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -1,28 +1,6 @@
 {% extends 'base.html' %}
 {% block active_parking %}active{% endblock %}
 {% block content %}
-<div class="container col-xl-10 col-xxl-8 px-4 py-5">
-    <div class="row align-items-center g-lg-5 py-5">
-      <div class="col-lg-6 col-12">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Паркуйтесь быстро и просто</h1>
-        <p class="lead">Введите цифры с шлагбаума в поле "ID парковки", перед этим войдите в аккаунт или зарегестрируйтесь, привязав карту</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="enter" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Войти</a>
-          <a href="sign" type="button" class="btn btn-outline-secondary btn-lg px-4">Зарегестрироваться</a>
-        </div>
-      </div>
-      <div class="col-12 mx-auto col-lg-6 my-5">
-        <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" method="post">
-          {% csrf_token %}
-          <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingInput" placeholder="" name="park_id">
-            <label for="floatingInput">ID парковки</label>
-          </div>
-          <button name="create_park" class="w-100 btn btn-lg btn-primary" type="submit">Начать парковку</button>
-        </form>
-      </div>
-    </div>
-</div>
 {% if reciepts %}
 {% for el in reciepts %}
 <div class="modal modal-sheet position-static d-block p-4">
@@ -35,7 +13,7 @@
                     <div class="mt-5 mb-3">
                         <img src="https://qrcode.tec-it.com/API/QRCode?data={{ el.pk }}&backcolor=%23ffffff" height="250" width="250"/>
                     </div>
-                    <p class="lead my-0">id парковки: {{ el.parking_id.id }}</p>
+                    <p class="lead my-0">ул. Дочери тарановой 1</p>
                     <p class="lead">id чека: {{ el.pk }}</p>
                 </div>
                 <form method="post">
@@ -49,6 +27,24 @@
 </div>
 {% endfor %}
 {% endif %}
+<div class="container col-xl-10 col-xxl-8 px-4 py-5">
+    <div class="row align-items-center g-lg-5 py-5">
+      <div class="col-lg-6 col-12">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Паркуйтесь быстро и просто</h1>
+        <p class="lead">Введите цифры с шлагбаума в поле "ID парковки", перед этим войдите в аккаунт или зарегестрируйтесь, привязав карту</p>
+      </div>
+      <div class="col-12 mx-auto col-lg-6 mt-0 mt-lg-5 mb-5">
+        <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" method="post">
+          {% csrf_token %}
+          <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="floatingInput" placeholder="" name="park_id">
+            <label for="floatingInput">ID парковки</label>
+          </div>
+          <button name="create_park" class="w-100 btn btn-lg btn-primary" type="submit">Начать парковку</button>
+        </form>
+      </div>
+    </div>
+</div>
 
 <div id="map" style="width:500px; height:400px; border-radius: 2rem;" class="shadow mx-auto"></div>
 <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
