--- a/parkingapp/templates/charts.html
+++ b/parkingapp/templates/charts.html
@@ -9,16 +9,16 @@
     let r = "{{reciepts}}".replace(/&quot;/g, "").replace(/&#x27;/g, "\"");
     let reciepts = JSON.parse(r);
     let labels = [];
-    let keys = Object.keys(reciepts["parks"]);
+    let keys = Object.keys(reciepts["hours"]);
     for(let i=0; i<keys.length; i++){
         labels.push(keys[i]);
     }
     let rec=[];
     for(let i=0; i<keys.length; i++){
-        rec.push(reciepts["parks"][keys[i]]);
+        rec.push(reciepts["hours"][keys[i]]);
     }
     new Chart(ctx, {
-      type: 'bar',
+      type: 'line',
       data: {
         labels: labels,
         datasets: [{
