--- a/parkingapp/templates/parkings.html
+++ b/parkingapp/templates/parkings.html
@@ -6,6 +6,8 @@
         <label name="places">{{el.places}}</label>
         <label name="price">{{el.price_per_minute}}</label>
         <button type="submit" value="{{el.pk}}" name="delete">удалить</button>
+        <input type="number" name="new_price">
+        <button type="submit" name="change_price" value="{{el.pk}}">Сменить цену</button>
         <br>
     {% endfor %}
 </form>
