--- a/parkingapp/templates/dash_users.html
+++ b/parkingapp/templates/dash_users.html
@@ -45,8 +45,8 @@
                                 <div class="d-sm-flex card-header py-3 justify-content-between align-items-center">
                                     <p class="text-primary m-0 fw-bold">Пользователи</p>
                                     <div>
-                                        <button class="btn btn-primary rounded-pill mx-1" type="button">Добавить администартора</button>
-                                        <button class="btn btn-primary rounded-pill mx-1" type="button">Добавить партнера</button>
+                                        <button class="btn btn-primary rounded-pill mx-1 my-1" type="button">Новый админ</button>
+                                        <button class="btn btn-primary rounded-pill mx-1 my-1 text-nowrap" type="button">Новый партнер</button>
                                     </div>
                                 </div>
                                 <div class="card-body">
