--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://api-maps.yandex.ru/2.0-stable/?apikey=fe7387f0-4485-4341-91bd-7b6427f658d7&load=package.full&lang=ru-RU" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1.47/?lang=ru_RU&amp;apikey=fe7387f0-4485-4341-91bd-7b6427f658d7" type="text/javascript"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <span class="fs-2">ЕСП</span>
           </a>
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="" class="nav-link {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
+            <li class="nav-item"><a href="/" class="nav-link {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
             {% if not user.is_authenticated %}
             <li class="nav-item"><a href="sign" class="nav-link {% block active_sign %}{% endblock %}">Регистрация</a></li>
             <li class="nav-item"><a href="enter" class="nav-link {% block active_enter %}{% endblock %}">Вход</a></li>
@@ -35,14 +35,6 @@
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
         </a>
-    
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="panel" class="nav-link px-2 text-body-secondary">Панель администратора</a></li>
-          <li class="nav-item"><a href="coupon" class="nav-link px-2 text-body-secondary">Выдача купонов</a></li>
-          <li class="nav-item"><a href="signadmin" class="nav-link px-2 text-body-secondary">Добавить администратора</a></li>
-          <li class="nav-item"><a href="signcoupon" class="nav-link px-2 text-body-secondary">Добавить партнера</a></li>
-          <li class="nav-item"><a href="addparking" class="nav-link px-2 text-body-secondary">Добавить парковку</a></li>
-        </ul>
       </footer>
     </div>
 </body>
