--- a/parkingapp/templates/dash_full.html
+++ b/parkingapp/templates/dash_full.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Dashboard - Brand</title>
-    <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
-</head>
-
-<body id="page-top">
-    <div id="wrapper">
-        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-dark p-0">
-            <div class="container-fluid d-flex flex-column p-0">
-                <a class="d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                    <div class="fw-bold mx-3"><span>есп</span></div>
-                </a>
-                <hr class="sidebar-divider my-0">
-                <ul class="navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link active" href="dash_full"><span>Наполняемость</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="dash_coupon"><span>Льготные места</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="dash_fin"><span>Финансовый отчет</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="dash_users"><span>Пользователи</span></a></li>
-                    <li class="nav-item"></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="d-flex flex-column" id="content-wrapper">
+{% extends 'dash_base.html' %}
+{% block content %}
+<div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
                 <div class="container-fluid mt-3">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
@@ -126,12 +100,4 @@
                     </div>
                 </div>
             </div>
-        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
-    </div>
-    <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'assets/js/chart.min.js' %}"></script>
-    <script src="{% static 'assets/js/bs-init.js' %}"></script>
-    <script src="{% static 'assets/js/theme.js' %}"></script>
-</body>
-
-</html>
+{% endblock %}
