--- a/parkingapp/templates/error.html
+++ b/parkingapp/templates/error.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="display-4 text-center fw-bold text-body-emphasis">Неизвестная ошибка</h1>
+<div class="container text-start">
+    <h1 class="display-6 text-body-emphasis">Ошибка</h1>
+    <a class="mt-2 btn btn-primary" href="{% url 'parkingapp:index' %}">На главную</a>
+</div>
 {% endblock %}
