--- a/parkingapp/templates/dash_base.html
+++ b/parkingapp/templates/dash_base.html
@@ -21,8 +21,8 @@
                     <li class="nav-item"><a class="nav-link {% block actfull %}{% endblock %}" href="dash_full"><span>Наполняемость</span></a></li>
                     <li class="nav-item"><a class="nav-link {% block actcoupon %}{% endblock %}" href="dash_coupon"><span>Льготные места</span></a></li>
                     <li class="nav-item"><a class="nav-link {% block actfin %}{% endblock %}" href="dash_fin"><span>Финансовый отчет</span></a></li>
-                    <li class="nav-item"><a class="nav-link {% block actuser %}{% endblock %}" href="dash_users"><span>Пользователи</span></a></li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link {% block actusers %}{% endblock %}" href="dash_users"><span>Пользователи</span></a></li>
+                    <li class="nav-item"><a class="nav-link {% block actparks %}{% endblock %}" href="dash_parks"><span>Парковки</span></a></li>
                 </ul>
             </div>
         </nav>
