--- a/parkingapp/templates/endparking.html
+++ b/parkingapp/templates/endparking.html
@@ -11,7 +11,7 @@
                 <p class="lead my-0">ул. Тарановой 5</p>
                 <p class="lead">id чека: {{ reciept.pk }}</p>
                 <hr>
-                <a class="btn btn-lg btn-primary" href="index">Вернуться назад</a>
+                <a class="btn btn-lg btn-primary" href="/">Вернуться назад</a>
             </div>
         </div>
       </div>
