--- a/parkingapp/templates/dash_fin.html
+++ b/parkingapp/templates/dash_fin.html
@@ -1,144 +1,113 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Dashboard - Brand</title>
-    <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
-</head>
-
-<body id="page-top">
-    <div id="wrapper">
-        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-dark p-0">
-            <div class="container-fluid d-flex flex-column p-0">
-                <a class="d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                    <div class="fw-bold mx-3"><span>есп</span></div>
-                </a>
-                <hr class="sidebar-divider my-0">
-                <ul class="navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link" href="dash_full"><span>Наполняемость</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="dash_coupon"><span>Льготные места</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="dash_fin"><span>Финансовый отчет</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="dash_users"><span>Пользователи</span></a></li>
-                    <li class="nav-item"></li>
-                </ul>
+{% extends 'dash_base.html' %}
+{% block actfin %}active{% endblock %}
+{% block content %}
+<div class="d-flex flex-column" id="content-wrapper">
+    <div id="content">
+        <div class="container-fluid mt-3">
+            <div class="d-sm-flex justify-content-between align-items-center mb-4">
+                <h3 class="text-dark mb-0">Финансовый отчет</h3>
+                <div class="input-group" style="max-width: 500px;">
+                    <input type="number" class="form-control btn btn-sm btn-outline-secondary" placeholder="id парковки">
+                    <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ start }}" name="period_start">
+                    <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ end }}" name="period_end">
+                    <button type="submit" class="btn btn-sm btn-outline-secondary">Получить данные</button>
+                </div>
             </div>
-        </nav>
-        <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content">
-                <div class="container-fluid mt-3">
-                    <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Финансовый отчет</h3>
-                        <div class="input-group" style="max-width: 400px;">
-                            <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ start }}" name="period_start">
-                            <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ end }}" name="period_end">
-                            <button type="submit" class="btn btn-sm btn-outline-secondary">Получить данные</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-auto col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-primary py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Транзакций на сумму</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>1488</span></div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
-                                    </div>
+            <div class="row">
+                <div class="col-auto col-md-6 col-xl-3 mb-4">
+                    <div class="card shadow border-start-primary py-2">
+                        <div class="card-body">
+                            <div class="row align-items-center no-gutters">
+                                <div class="col me-2">
+                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Транзакций на сумму</span></div>
+                                    <div class="text-dark fw-bold h5 mb-0"><span>1488</span></div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-auto col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-success py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Количество транзакций</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>17</span></div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-auto col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-success py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Льготных транзакций на сумму</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>17</span></div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-auto col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-start-success py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Количество льготных транзакций</span></div>
-                                            <div class="text-dark fw-bold h5 mb-0"><span>17</span></div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="card shadow p-0">
-                            <div class="card-header py-3">
-                                <p class="text-primary m-0 fw-bold">Общий отчет</p>
-                            </div>
-                            <div class="card-body">
-                                <div class="row">
-                                <div class="table-responsive table mt-2" id="dataTable" role="grid" aria-describedby="dataTable_info">
-                                    <table class="table my-0" id="dataTable">
-                                        <thead>
-                                            <tr>
-                                                <th>Парковка</th>
-                                                <th>Транзакций на сумму</th>
-                                                <th>Кол-во транзакций</th>
-                                                <th>Льготных транзакций на сумму</th>
-                                                <th>Кол-во льготных транзакций</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>Integration Specialist</td>
-                                                <td>New York</td>
-                                                <td>61</td>
-                                                <td>2012/12/02<br></td>
-                                                <td>$372,000</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Software Engineer</td>
-                                                <td>London</td>
-                                                <td>38</td>
-                                                <td>2011/05/03<br></td>
-                                                <td>$163,500</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
+                                <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
                             </div>
                         </div>
                     </div>
                 </div>
-
+                <div class="col-auto col-md-6 col-xl-3 mb-4">
+                    <div class="card shadow border-start-success py-2">
+                        <div class="card-body">
+                            <div class="row align-items-center no-gutters">
+                                <div class="col me-2">
+                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Количество транзакций</span></div>
+                                    <div class="text-dark fw-bold h5 mb-0"><span>17</span></div>
+                                </div>
+                                <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-auto col-md-6 col-xl-3 mb-4">
+                    <div class="card shadow border-start-success py-2">
+                        <div class="card-body">
+                            <div class="row align-items-center no-gutters">
+                                <div class="col me-2">
+                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Льготных транзакций на сумму</span></div>
+                                    <div class="text-dark fw-bold h5 mb-0"><span>17</span></div>
+                                </div>
+                                <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-auto col-md-6 col-xl-3 mb-4">
+                    <div class="card shadow border-start-success py-2">
+                        <div class="card-body">
+                            <div class="row align-items-center no-gutters">
+                                <div class="col me-2">
+                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Количество льготных транзакций</span></div>
+                                    <div class="text-dark fw-bold h5 mb-0"><span>17</span></div>
+                                </div>
+                                <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
-    </div>
-    <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'assets/js/chart.min.js' %}"></script>
-    <script src="{% static 'assets/js/bs-init.js' %}"></script>
-    <script src="{% static 'assets/js/theme.js' %}"></script>
-</body>
+            <div class="row">
+                <div class="card shadow p-0">
+                    <div class="card-header py-3">
+                        <p class="text-primary m-0 fw-bold">Общий отчет</p>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                        <div class="table-responsive table mt-2" id="dataTable" role="grid" aria-describedby="dataTable_info">
+                            <table class="table my-0" id="dataTable">
+                                <thead>
+                                    <tr>
+                                        <th>Парковка</th>
+                                        <th>Транзакций на сумму</th>
+                                        <th>Кол-во транзакций</th>
+                                        <th>Льготных транзакций на сумму</th>
+                                        <th>Кол-во льготных транзакций</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Integration Specialist</td>
+                                        <td>New York</td>
+                                        <td>61</td>
+                                        <td>2012/12/02<br></td>
+                                        <td>$372,000</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Software Engineer</td>
+                                        <td>London</td>
+                                        <td>38</td>
+                                        <td>2011/05/03<br></td>
+                                        <td>$163,500</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-</html>
+    </div>
+</div>
+{% endblock %}
