--- a/parkingapp/templates/dash_full.html
+++ b/parkingapp/templates/dash_full.html
@@ -1,11 +1,13 @@
 {% extends 'dash_base.html' %}
+{% block actfull %}active{% endblock %}
 {% block content %}
 <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
                 <div class="container-fluid mt-3">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
                         <h3 class="text-dark mb-0">Наполняемость</h3>
-                        <div class="input-group" style="max-width: 400px;">
+                        <div class="input-group" style="max-width: 500px;">
+                            <input type="number" class="form-control btn btn-sm btn-outline-secondary" placeholder="id парковки">
                             <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ start }}" name="period_start">
                             <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ end }}" name="period_end">
                             <button type="submit" class="btn btn-sm btn-outline-secondary">Получить данные</button>
