--- a/parkingapp/templates/dash_parks.html
+++ b/parkingapp/templates/dash_parks.html
@@ -1,5 +1,5 @@
 {% extends 'dash_base.html' %}
-{% block actusers %}active{% endblock %}
+{% block actpaarks %}active{% endblock %}
 {% block content %}
 <div class="d-flex flex-column" id="content-wrapper">
     <div id="content">
@@ -13,10 +13,9 @@
                 <div class="row">
                     <div class="card shadow p-0">
                         <div class="d-sm-flex card-header py-3 justify-content-between align-items-center">
-                            <p class="text-primary m-0 fw-bold">Пользователи</p>
+                            <p class="text-primary m-0 fw-bold">Парковки</p>
                             <div>
-                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="signadmin" type="button">Новый админ</a>
-                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="signcoupon" type="button">Новый партнер</a>
+                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="addparking" type="button">Новая парковка</a>
                             </div>
                         </div>
                         <div class="card-body">
@@ -25,28 +24,22 @@
                                 <table class="table my-0" id="dataTable">
                                     <thead>
                                         <tr>
-                                            <th>Имя пользователя</th>
-                                            <th>Права</th>
-                                            <th>Прикреплен к парковке</th>
+                                            <th>Парковка</th>
+                                            <th>id</th>
+                                            <th>Кол-во мест</th>
                                             <th>Действие</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for el in users %}
                                         <tr>
-                                            <td>{{ el.username }}</td>
-                                            <td>{{ el.rights }}</td>
-                                            {% if el.rights == 1 %}
-                                            <td>{{ el.park_id }}</td>
-                                            {% else %}
-                                            <td></td>
-                                            {% endif %}
+                                            <td>ул. Сучья</td>
+                                            <td>0001</td>
+                                            <td>35</td>
                                             <form method="post">
                                             {%csrf_token%}
                                             <td><button class="btn btn-danger rounded-pill" value="{{el.pk}}" type="submit" name="delete">Удалить</button></td>
                                             </form>
                                         </tr>
-                                        {% endfor %}
                                 </table>
                             </div>
                         </div>
