--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -13,6 +13,7 @@
                     <div class="mt-5 mb-3">
                         <img src="https://qrcode.tec-it.com/API/QRCode?data={{ el.pk }}&backcolor=%23ffffff" height="250" width="250"/>
                     </div>
+                    <p class="lead my-0">0 ₽</p>
                     <p class="lead my-0">ул. Дочери тарановой 1</p>
                     <p class="lead">id чека: {{ el.pk }}</p>
                 </div>
@@ -25,6 +26,7 @@
       </div>
     </div>
 </div>
+<hr>
 {% endfor %}
 {% endif %}
 <div class="container col-xl-10 col-xxl-8 px-4 py-3 py-lg-5">
