льготные места в статистике

--- a/parkingapp/templates/dash_coupon.html
+++ b/parkingapp/templates/dash_coupon.html
@@ -6,12 +6,15 @@
         <div class="container-fluid mt-3">
             <div class="d-sm-flex justify-content-between align-items-center mb-4">
                 <h3 class="text-dark mb-0">Льготные места</h3>
-                <div class="input-group" style="max-width: 500px;">
-                    <input type="number" class="form-control btn btn-sm btn-outline-secondary" placeholder="id парковки">
-                    <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ start }}" name="period_start">
-                    <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ end }}" name="period_end">
-                    <button type="submit" class="btn btn-sm btn-outline-secondary">Получить данные</button>
-                </div>
+                <form method="POST">
+                    <div class="input-group" style="max-width: 500px;">
+                        {% csrf_token %}
+                        <input type="number" class="form-control btn btn-sm btn-outline-secondary" name="id" placeholder="id парковки">
+                        <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ start }}" name="period_start">
+                        <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ end }}" name="period_end">
+                        <button type="submit" class="btn btn-sm btn-outline-secondary">Получить данные</button>
+                    </div>
+                </form>
             </div>
             <div class="row">
                 <div class="col-auto col-md-6 col-xl-4 mb-4">
@@ -20,7 +23,7 @@
                             <div class="row align-items-center no-gutters">
                                 <div class="col me-2">
                                     <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>сумм. период пребывания на льготных местах</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span>1488</span></div>
+                                    <div class="text-dark fw-bold h5 mb-0"><span>{{total_time}}</span></div>
                                 </div>
                                 <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
                             </div>
@@ -33,7 +36,7 @@
                             <div class="row align-items-center no-gutters">
                                 <div class="col me-2">
                                     <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Средний период пребывания на льготных местах</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span>17</span></div>
+                                    <div class="text-dark fw-bold h5 mb-0"><span>{{average_time}}</span></div>
                                 </div>
                                 <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
                             </div>
@@ -78,7 +81,44 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <div class="chart-area"><canvas data-bss-chart="{&quot;type&quot;:&quot;line&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Jan&quot;,&quot;Feb&quot;,&quot;Mar&quot;,&quot;Apr&quot;,&quot;May&quot;,&quot;Jun&quot;,&quot;Jul&quot;,&quot;Aug&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Earnings&quot;,&quot;fill&quot;:true,&quot;data&quot;:[&quot;0&quot;,&quot;10000&quot;,&quot;5000&quot;,&quot;15000&quot;,&quot;10000&quot;,&quot;20000&quot;,&quot;15000&quot;,&quot;25000&quot;],&quot;backgroundColor&quot;:&quot;rgba(78, 115, 223, 0.05)&quot;,&quot;borderColor&quot;:&quot;rgba(78, 115, 223, 1)&quot;}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:false,&quot;legend&quot;:{&quot;display&quot;:false,&quot;labels&quot;:{&quot;fontStyle&quot;:&quot;normal&quot;}},&quot;title&quot;:{&quot;fontStyle&quot;:&quot;normal&quot;},&quot;scales&quot;:{&quot;xAxes&quot;:[{&quot;gridLines&quot;:{&quot;color&quot;:&quot;rgb(234, 236, 244)&quot;,&quot;zeroLineColor&quot;:&quot;rgb(234, 236, 244)&quot;,&quot;drawBorder&quot;:false,&quot;drawTicks&quot;:false,&quot;borderDash&quot;:[&quot;2&quot;],&quot;zeroLineBorderDash&quot;:[&quot;2&quot;],&quot;drawOnChartArea&quot;:false},&quot;ticks&quot;:{&quot;fontColor&quot;:&quot;#858796&quot;,&quot;fontStyle&quot;:&quot;normal&quot;,&quot;padding&quot;:20}}],&quot;yAxes&quot;:[{&quot;gridLines&quot;:{&quot;color&quot;:&quot;rgb(234, 236, 244)&quot;,&quot;zeroLineColor&quot;:&quot;rgb(234, 236, 244)&quot;,&quot;drawBorder&quot;:false,&quot;drawTicks&quot;:false,&quot;borderDash&quot;:[&quot;2&quot;],&quot;zeroLineBorderDash&quot;:[&quot;2&quot;]},&quot;ticks&quot;:{&quot;fontColor&quot;:&quot;#858796&quot;,&quot;fontStyle&quot;:&quot;normal&quot;,&quot;padding&quot;:20}}]}}}"></canvas></div>
+                            <div>
+                                <canvas id="myChart"></canvas>
+                            </div>
+                            
+                            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+                            <script>
+                                const ctx = document.getElementById('myChart');
+                                let r = "{{reciepts}}".replace(/&quot;/g, "").replace(/&#x27;/g, "\"");
+                                console.log(r);
+                                let reciepts = JSON.parse(r);
+                                let labels = [], rec=[];
+                                let name = reciepts["name"];
+                                let keys = Object.keys(reciepts["period"]);
+                                for(let i=0; i<keys.length; i++){
+                                    labels.push(keys[i]);
+                                    rec.push(reciepts["period"][keys[i]]);
+                                }
+                                
+                                new Chart(ctx, {
+                                    type: 'line',
+                                    data: {
+                                    labels: labels,
+                                    datasets: [{
+                                        label: 'Количество чеков по '+name,
+                                        data: rec,
+                                        borderWidth: 0.5
+                                    }]
+                                    },
+                                    options: {
+                                    scales: {
+                                        y: {
+                                        beginAtZero: true
+                                        }
+                                    }
+                                    }
+                                });
+                            </script>
+
                         </div>
                     </div>
                 </div>
