--- a/parkingapp/templates/dash_base.html
+++ b/parkingapp/templates/dash_base.html
@@ -10,6 +10,16 @@
 </head>
 
 <body id="page-top">
+    <style>
+        .radr {
+            border-top-right-radius: 1rem;
+            border-bottom-right-radius: 1rem;
+        }
+        .radl {
+            border-top-left-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+        }
+    </style>
     <div id="wrapper">
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-dark p-0" id="hidza">
             <div class="container-fluid d-flex flex-column p-0">
