--- a/parkingapp/templates/dash_coupon.html
+++ b/parkingapp/templates/dash_coupon.html
@@ -7,10 +7,10 @@
             <div class="d-sm-flex justify-content-between align-items-center mb-4">
                 <h3 class="text-dark mb-0">Льготные места</h3>
                 <div class="input-group" style="max-width: 500px;">
-                    <input type="number" class="form-control btn btn-sm btn-outline-secondary" placeholder="id парковки">
+                    <input type="number" class="form-control btn btn-sm btn-outline-secondary radl" placeholder="id парковки">
                     <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ start }}" name="period_start">
                     <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ end }}" name="period_end">
-                    <button type="submit" class="btn btn-sm btn-outline-secondary">Получить данные</button>
+                    <button type="submit" class="btn btn-sm btn-outline-secondary radr">Получить данные</button>
                 </div>
             </div>
             <div class="row">
