--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -7,7 +7,7 @@
     <script src="https://api-maps.yandex.ru/2.1.47/?lang=ru_RU&amp;apikey=fe7387f0-4485-4341-91bd-7b6427f658d7" type="text/javascript"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
+<body class="bg-body-tertiary">
   <form method="post" action="enter">
 <body style="overflow-x: hidden; width: 100vw;" {% block theme %}{% endblock %}>
     <div class="container">
@@ -21,7 +21,7 @@
             <li class="nav-item"><a href="sign" class="nav-link {% block active_sign %}{% endblock %}">Регистрация</a></li>
             <li class="nav-item"><a href="enter" class="nav-link {% block active_enter %}{% endblock %}">Вход</a></li>
             {% else %}
-            <li class="nav-item"><a href="logout" class="nav-link">Выход</a></li>
+            <li class="nav-item"><a href="/" class="nav-link">Выход</a></li>
             {% endif %}
           </ul>
         </header>
