--- a/parkingapp/templates/coupon.html
+++ b/parkingapp/templates/coupon.html
@@ -7,13 +7,13 @@
             <p class="col-lg-10 fs-4">Введите идентификационный номер чека, который вам предоставит пользователь.</p>
           </div>
           <div class="col-md-10 mx-auto col-lg-5">
-            <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" method="post">
+            <form class="p-4 p-md-5 shadow border bg-white rounded-4" method="post">
               {% csrf_token %}
-              <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingInput" placeholder="" name="benifit">
+              <div class="form-floating mb-3 rounded-4">
+                <input type="text" class="form-control rounded-4" id="floatingInput" placeholder="" name="benifit">
                 <label for="floatingInput">Введите ID чека</label>
               </div>
-              <button class="w-100 btn btn-lg btn-primary" type="submit">Обнулить чек</button>
+              <button class="w-100 btn btn-lg rounded-4 btn-primary" type="submit">Обнулить чек</button>
             </form>
           </div>
         </div>
