--- a/parkingapp/templates/dont_have_access.html
+++ b/parkingapp/templates/dont_have_access.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
-{% block active_parking %}active{% endblock %}
 {% block content %}
-<div class="container text-start">
+<div class="container text-center">
     <h1 class="display-6 text-body-emphasis">У вас нет доступа к этой странице</h1>
-    <a class="mt-2 btn btn-primary" href="{% url 'parkingapp:index' %}">На главную</a>
+    <a class="mt-2" href="/">На главную</a>
 </div>
-
 {% endblock %}
