--- a/parkingapp/templates/enter.html
+++ b/parkingapp/templates/enter.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
     <div class="modal-dialog" role="document">
-      <div class="modal-content rounded-4 shadow">
+      <div class="modal-content rounded-4 shadow border">
         <div class="modal-header p-5 pb-4 border-bottom-0">
           <h1 class="fw-bold mb-0 fs-2">Вход</h1>
         </div>
@@ -19,7 +19,7 @@
               {{ form.password }}
               <label for="{{ form.password.id_for_label }}">Пароль</label>
             </div>
-            <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Войти</button>
+            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Войти</button>
             <small>{{ error }}</small>
           </form>
         </div>
