--- a/parkingapp/templates/error.html
+++ b/parkingapp/templates/error.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container text-start">
-    <h1 class="display-6 text-body-emphasis">Ошибка</h1>
-    <a class="mt-2 btn btn-primary" href="{% url 'parkingapp:index' %}">На главную</a>
+<div class="container text-center">
+    <h1 class="display-6 text-body-emphasis">Ошибка 1487</h1>
+    <a class="mt-2" href="{% url 'parkingapp:index' %}">На главную</a>
 </div>
 {% endblock %}
