--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -3,57 +3,96 @@
 {% block content %}
 {% if reciepts %}
 {% for el in reciepts %}
-<div class="modal modal-sheet position-static d-block p-4">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content rounded-4">
-        <div class="modal-body">
-            <div class="px-4 my-5 text-center">
-                <h1 class="display-4 fw-bold text-body-emphasis">Парковка идет<br><span></span></h1>
-                <div class="mx-auto">
-                    <div class="mt-5 mb-3">
-                        <img src="https://qrcode.tec-it.com/API/QRCode?data={{ el.pk }}&backcolor=%23ffffff" height="250" width="250"/>
-                    </div>
-                    <p class="lead my-0">0 ₽</p>
-                    <p class="lead my-0">ул. Дочери тарановой 1</p>
-                    <p class="lead">id чека: {{ el.pk }}</p>
-                </div>
-                <form method="post">
-                  {% csrf_token %}
-                  <button type="submit" name="end_park" value="{{ el.pk }}" class="btn btn-lg btn-primary w-100">Завершить парковку</button>
-                </form>
+<div class="modal modal-sheet pb-5 position-static d-block">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content rounded-4 shadow border">
+      <div class="modal-body p-5">
+
+        <ul class="d-grid gap-4 my-0 list-unstyled small">
+          <li class="d-flex gap-4">
+            <div class="bi text-warning flex-shrink-0">
+              <img src="https://qrcode.tec-it.com/API/QRCode?data={{ el.pk }}&backcolor=%23ffffff" height="48" width="48"/>
             </div>
-        </div>
-      </div>
-    </div>
-</div>
-<hr>
-{% endfor %}
-{% endif %}
-<div class="container col-xl-10 col-xxl-8 px-4 py-3 py-lg-5">
-    <div class="row align-items-center g-lg-5 py-3 py-lg-5">
-      <div class="col-lg-6 col-12">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1">Паркуйтесь быстро и просто</h1>
-        <p class="lead">Введите цифры с шлагбаума в поле "ID парковки", перед этим войдите в аккаунт или зарегестрируйтесь, привязав карту</p>
-      </div>
-      <div class="col-12 mx-auto col-lg-6 mt-0 mt-lg-5 mb-3">
-        <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" method="post">
+            <div class="ps-5 ms-5 text-muted">
+              22.05.30 12:25 <br>
+              22.05.30 13:30
+            </div>
+          </li>
+          <hr class="ms-4">
+          <li class="row">
+            <div class="col-6">
+              <h5 class="bi flex-shrink-0">Парковка идет</h5>
+            </div>
+            <div class="col-6">
+              <h5 class="mb-0 text-end fw-light">ул. Тарановой 5</h5>
+            </div>
+          </li>
+          <li class="row">
+            <div class="col-6">
+              <h5 class="bi flex-shrink-0">Стоимость</h5>
+            </div>
+            <div class="col-6">
+              <h5 class="mb-0 text-end fw-light">0 ₽</h5>
+            </div>
+          </li>
+          <li class="row">
+            <div class="col-6">
+              <h5 class="bi flex-shrink-0">ID парковки</h5>
+            </div>
+            <div class="col-6">
+              <h5 class="mb-0 text-end fw-light">0001</h5>
+            </div>
+          </li>
+          <li class="row">
+            <div class="col-6">
+              <h5 class="bi flex-shrink-0">ID чека</h5>
+            </div>
+            <div class="col-6">
+              <h5 class="mb-0 text-end fw-light">{{ el.pk }}</h5>
+            </div>
+          </li>
+        </ul>
+        <form method="post">
           {% csrf_token %}
-          <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingInput" placeholder="" name="park_id">
-            <label for="floatingInput">ID парковки</label>
-          </div>
-          <button name="create_park" class="w-100 btn btn-lg btn-primary" type="submit">Начать парковку</button>
+          <button type="submit" name="end_park" value="{{ el.pk }}" class="btn btn-lg rounded-4 mt-5 btn-primary w-100">Завершить парковку</button>
         </form>
       </div>
     </div>
+  </div>
 </div>
-<hr>
+{% endfor %}
+{% endif %}
+{% if reciepts %}
+{% for el in reciepts %}
+
+{% endfor %}
+{% else %}
+<div class="container col-xl-10 col-xxl-8 px-4 py-3 py-lg-5">
+  <div class="row align-items-center g-lg-5 py-3 py-lg-5">
+    <div class="col-lg-6 col-12">
+      <h1 class="display-5 fw-bold text-body-emphasis lh-1">Паркуйтесь быстро и просто</h1>
+      <p class="lead">Введите цифры с шлагбаума в поле "ID парковки", перед этим войдите в аккаунт или зарегестрируйтесь, привязав карту</p>
+    </div>
+    <div class="col-12 mx-auto col-lg-6 mt-0 mt-lg-5 mb-3">
+      <form class="p-4 p-md-5 border bg-white rounded-4 shadow" method="post">
+        {% csrf_token %}
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control rounded-4" id="floatingInput" placeholder="" name="park_id">
+          <label for="floatingInput">ID парковки</label>
+        </div>
+        <button name="create_park" class="w-100 btn btn-lg btn-primary rounded-4" type="submit">Начать парковку</button>
+      </form>
+    </div>
+  </div>
+</div>
+{% endif %}
+
 <style>
   #myMap {
       width: 100vw; 
       height: 100vw;
-      max-width: 550px;
-      max-height: 550px;
+      max-width: 100vw;
+      max-height: 576px;
     }
 </style>
 <div id="myMap" class="mx-auto"></div>
