--- a/parkingapp/templates/sign.html
+++ b/parkingapp/templates/sign.html
@@ -3,12 +3,12 @@
 {% block content %}
 <div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
     <div class="modal-dialog" role="document">
-      <div class="modal-content rounded-4 shadow">
+      <div class="modal-content rounded-4 shadow border">
         <div class="modal-header p-5 pb-4 border-bottom-0">
           <h1 class="fw-bold mb-0 fs-2">Регистрация</h1>
         </div>
   
-        <div class="modal-body p-5 pt-0">
+        <div class="modal-body p-5 pt-0 rounded-4">
           <form method="post">
             {% csrf_token %}
             <div class="form-floating mb-3">
@@ -38,7 +38,7 @@
               <label for="{{ form.password2.id_for_label }}">Подтвердите пароль</label>
             </div>
             
-            <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Зарегистрироваться</button>
+            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Зарегистрироваться</button>
             <small class="text-danger">{{ error }}</small>
           </form>
         </div>
