--- a/parkingapp/templates/signcoupon.html
+++ b/parkingapp/templates/signcoupon.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
     <div class="modal-dialog" role="document">
-      <div class="modal-content rounded-4 shadow">
+      <div class="modal-content rounded-4 shadow border">
         <div class="modal-header p-5 pb-4 border-bottom-0">
           <h1 class="fw-bold mb-0 fs-2">Регистрация выдачи купонов</h1>
         </div>
@@ -26,8 +26,10 @@
               {{ form.park_id }}
               <label for="{{ form.park_id.id_for_label }}">Привязка к парковке</label>
             </div>
+            <small class="text-body-secondary">Привязка партнера к парковке обязательна</small>
+            <hr class="my-4">
             {{ error }}
-            <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Зарегистрироваться</button>
+            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Зарегистрироваться</button>
           </form>
         </div>
       </div>
